# dep-soft

./: .gitignore  README.md
rpn/test/: CMakeLists.txt  check-rpn-stack.c  check-rpn.c
stats/: CMakeLists.txt  README.md  README.txt
stats/doc/: Doxyfile.in
stats/gen_tests/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
stats/gen_tests/crashes/: README.txt  id:000000,sig:06,src:000001,op:havoc,rep:16  id:000001,sig:06,src:000050,op:havoc,rep:16  id:000002,sig:06,src:000050,op:havoc,rep:8  id:000003,sig:06,src:000085,op:havoc,rep:8  id:000004,sig:06,src:000096,op:havoc,rep:16  id:000005,sig:06,src:000091,op:havoc,rep:8  id:000006,sig:06,src:000119,op:havoc,rep:4
stats/gen_tests/queue/: id:000001,orig:test2  id:000002,orig:test3  id:000004,src:000001,op:flip1,pos:0,+cov  id:000005,src:000001,op:flip1,pos:2,+cov  id:000006,src:000001,op:flip1,pos:2  id:000007,src:000001,op:flip1,pos:2,+cov  id:000008,src:000001,op:flip1,pos:3  id:000009,src:000001,op:flip1,pos:4  id:000010,src:000001,op:flip1,pos:5  id:000011,src:000001,op:flip1,pos:5,+cov  id:000012,src:000001,op:flip1,pos:7  id:000013,src:000001,op:flip1,pos:8,+cov  id:000014,src:000001,op:flip1,pos:8  id:000015,src:000001,op:flip1,pos:9  id:000016,src:000001,op:flip1,pos:10  id:000017,src:000001,op:flip1,pos:13  id:000018,src:000001,op:flip1,pos:13,+cov  id:000019,src:000001,op:flip32,pos:2,+cov  id:000020,src:000001,op:flip32,pos:5,+cov  id:000021,src:000001,op:arith8,pos:2,val:-22,+cov  id:000022,src:000001,op:int8,pos:0,val:+0,+cov  (+106 more)
stats/src/: CMakeLists.txt  main.c  stats.c  stats.h
stats/test/: CMakeLists.txt  check-stats.c
stats/testCases/: test1  test2
(+19 files in other folders)
